--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Countdown</title>
   </head>
   <body>
-    <!-- <div id="year" class="year"></div> -->
 
     <h1>Countdown to Candle Con</h1>
 
@@ -30,19 +29,27 @@
       </div>
     </div>
 
-    <span class="credits">
+    <div>
+      <form class="newsletter">
+        <label for="email">Subscribe to the newsletter for updates</label>
+        <input type="email" required id="email" class="email" />
+        <button type="submit" id="button" class="button">Submit</button>
+      </form>
+    </div>
+
+    <div class="credits">
       <i class="fab fa-github"></i>
       <p>
         Made by a
         <a href="https://github.com/ScotDev" class="tooltip" target="_blank">
           Tealight<span class="tooltiptext"
-            >Tealight <span class="phonetics">(ˈtiːˌlaɪt) </span>NOUN - 1. A Candle Kid who is yet to earn their stripes.
-            2. A pathetic scrub</span
+            >Tealight <span class="phonetics">(ˈtiːˌlaɪt) </span> NOUN - 1. A
+            Candle Kid who is yet to earn their stripes. 2. A pathetic
+            scrub</span
           >
-          </a
-        >
+        </a>
       </p>
-    </div>
+    </>
 
     <img
       src="./img/loading.svg"
