Added location link

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" integrity="sha384-v8BU367qNbs/aIZIxuivaU55N5GPF89WBerHoGA4QTcbUjYiLQtKdrfXnqAcXyTv" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
     <title>CandleCon Countdown</title>
   </head>
   <body>
     <h1>Countdown to CandleCon</h1>
+    <h2 class="location"><a href="https://goo.gl/maps/eHLsRsBCQhFmrR3i8" class="location-link">Amsterdam</a> <i class="fas fa-map-marker-alt"></i></h2>
 
     <div id="countdown" class="countdown">
       <div class="time">
@@ -42,7 +44,6 @@
     </div>
 
     <div class="credits" id="credits">
-      <i class="fab fa-github"></i>
       <p>
         Made by a
         <a href="https://github.com/ScotDev" class="tooltip" target="_blank">
@@ -51,6 +52,7 @@
             Candle Kid who is yet to earn their stripes. 2. A pathetic
             scrub</span
           >
+          <i class="fab fa-github"></i>
         </a>
       </p>
     </div>
