Moved location icon

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Countdown to CandleCon</h1>
-    <h2 class="location"><a href="https://goo.gl/maps/eHLsRsBCQhFmrR3i8" class="location-link" target="_blank">Amsterdam</a> <i class="fas fa-map-marker-alt"></i></h2>
+    <h2 class="location"><i class="fas fa-map-marker-alt"></i> <a href="https://goo.gl/maps/eHLsRsBCQhFmrR3i8" class="location-link" target="_blank">Amsterdam</a></h2>
 
     <div id="countdown" class="countdown">
       <div class="time">
